--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
             </section>
             <section class="bg-success">
-                <div class="container d-flex g-0">
+                <div class="container d-flex align-items-center g-0">
                   
                   
                     <div class="container">
